# Kimera-LCD-ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: LCD_ros.h
include/kimera-lcd-ros/: lcd-wrapper.h  ros-lcd-data-source.h
include/lcd_ros/: LCD_ros.h  StereoBuffer.h
install/: kimera_lcd_ros_ssh.rosinstall  kimera_ros_lcd_http.rosinstall
launch/: LCD_ros_euroc.launch  LCD_ros_tesse.launch  lcd_data_provider.launch  lcd_ros.launch  lcd_ros_euroc.launch  lcd_ros_tesse.launch
msg/: CameraParams.msg  Closure.msg  LcdInputPayload.msg  PoseError.msg  StereoFrame.msg  StereoMatchingParams.msg
param/EUROC/: LCDParameters.yaml  calibration.yaml
param/TESSE/: LCDParameters.yaml  calibration.yaml
rviz/: lcd_ros_config.rviz  lcd_ros_tesse_config.rviz
scripts/: closure_visualizer_node.py  ros_lcd_data_provider.py  transform_converter_node.py
src/: LCD_ros.cpp  LCD_ros_node.cpp  StereoBuffer.cpp  kimera-lcd-ros-node.cpp  lcd-wrapper.cpp  ros-lcd-data-source.cpp
