<?xml version="1.0"?>
<package format="2">
  <name>lcd_ros</name>
  <version>0.1.0</version>
  <description>Standalone tester for Loop Closure Detection for SPARK VIO
  </description>

  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>SparkVio</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

</package>
