<?xml version="1.0"?>
<package format="2">
  <name>kimera_lcd_ros</name>
  <version>0.1.0</version>
  <description>ROS wrapper for the LoopClosureDetector module of Kimera
  </description>

  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>KimeraVIO</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
